--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
+     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
+    crossorigin="anonymous"/>
+    <!-- FontAwesome icon CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"/>
+    crossorigin="anonymous"/>
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
+
     <link rel="stylesheet" href="./Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
@@ -22,12 +27,68 @@
     </header>
 
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row time-block" id="9">
+        <div class="col-1 hour pt-2">9AM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
+      <div class="row time-block" id="10">
+        <div class="col-1 hour pt-2">10AM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
+      <div class="row time-block" id="11">
+        <div class="col-1 hour pt-2">11AM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
       
+      <div class="row time-block" id="12">
+        <div class="col-1 hour pt-2">12PM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
+      <div class="row time-block" id="1">
+        <div class="col-1 hour pt-2">1PM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
+      <div class="row time-block" id="2">
+        <div class="col-1 hour pt-2">2PM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
+      <div class="row time-block" id="3">
+        <div class="col-1 hour pt-2">3PM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
+      <div class="row time-block" id="4">
+        <div class="col-1 hour pt-2">4PM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
+      <div class="row time-block" id="5">
+        <div class="col-1 hour pt-2">5PM</div>
+        <textarea class="col-10 plan"></textarea>
+        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+      </div>
+
     </div>
 
+    <!-- JQuery script -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Moment JS script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="./Develop/script.js"></script>
   </body>
 </html>
