changed button styles

--- a/index.html
+++ b/index.html
@@ -30,55 +30,55 @@
       <div class="row timeBlock" id="9">
         <div class="col-1 hour pt-2">9AM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="10">
         <div class="col-1 hour pt-2">10AM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="11">
         <div class="col-1 hour pt-2">11AM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
       
       <div class="row timeBlock" id="12">
         <div class="col-1 hour pt-2">12PM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="1">
         <div class="col-1 hour pt-2">1PM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="2">
         <div class="col-1 hour pt-2">2PM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="3">
         <div class="col-1 hour pt-2">3PM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="4">
         <div class="col-1 hour pt-2">4PM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="5">
         <div class="col-1 hour pt-2">5PM</div>
         <textarea class="col-10 plannerText"></textarea>
-        <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
+        <button class="col-1 saveButton rounded-end bg-primary text-white border border-white"><i class="fas fa-save"></i></button>        
       </div>
 
     </div>
