text input to black

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
     <!-- My CSS -->
-    <link rel="stylesheet" href="./Develop/style.css" />
+    <link rel="stylesheet" href="./Develop/style.css"/>
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,55 +29,55 @@
     <div class="container">
       <div class="row timeBlock" id="9">
         <div class="col-1 hour pt-2">9AM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="10">
         <div class="col-1 hour pt-2">10AM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="11">
         <div class="col-1 hour pt-2">11AM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
       
       <div class="row timeBlock" id="12">
         <div class="col-1 hour pt-2">12PM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="1">
         <div class="col-1 hour pt-2">1PM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="2">
         <div class="col-1 hour pt-2">2PM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="3">
         <div class="col-1 hour pt-2">3PM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="4">
         <div class="col-1 hour pt-2">4PM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
       <div class="row timeBlock" id="5">
         <div class="col-1 hour pt-2">5PM</div>
-        <textarea class="col-10 plannerText"></textarea>
+        <textarea class="col-10 plannerText text-body"></textarea>
         <button class="col-1 saveButton"><i class="fas fa-save"></i></button>        
       </div>
 
@@ -87,7 +87,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Moment JS script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <!-- Bootstrap Core JavaScript -->>
+    <!-- Bootstrap Core JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- My script.js -->
     <script src="./Develop/script.js"></script>
