--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
     <!-- My CSS -->
     <link rel="stylesheet" href="./Develop/style.css"/>
-    <title>Work Day Scheduler</title>
+    <title>Mackenzie: Work Day Scheduler</title>
   </head>
 
   <body>
